# runtime-docs

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/runtime_docstrings/: _parser.py
tests/: test_class.py  test_dataclass.py  test_dataclass_inheritance.py  test_enum.py  test_import.py  test_inheritance.py
