[project]
name = "runtime-docstrings"
version = "0.0.0"
description = "Runtime access to Python class attribute docstrings (PEP 224)"
readme = "README.md"
authors = [{ name = "gesslerpd", email = "gesslerpd@users.noreply.github.com" }]
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["uv-build>=0.8.2"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.4",
]
